# piano-virtual

./: .gitignore  Cargo.toml
.github/workflows/: deploy.yml
app/: build.ps1  package.json
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/frontend/: index.html  script.js  style.css
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: lib.rs  main.rs
backend/: Cargo.toml
backend/migrations/: 001_initial.sql  002_admin_system.sql  003_error_logs.sql  004_app_info.sql  005_friends.sql  006_friend_requests_daily.sql  007_user_last_active.sql  008_key_mappings.sql  009_user_preferences.sql  010_multiplayer.sql  011_audit_logs.sql  012_user_streaks.sql  013_email_verification.sql  014_pending_registrations.sql  015_drop_audit_fk.sql
backend/src/: audit.rs  auth.rs  email.rs  handlers.rs  main.rs  models.rs
backend/static/: index.html  invite.html
backend/static/.well-known/: apple-app-site-association  assetlinks.json
